# TMCxx

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake  TMCxxConfig.cmake.in  WelcomeMessage.cmake  tmcxx.pc.in  toolchain-arm-gcc.cmake
docs/: Doxyfile  README.md
examples/: 01_simple_rotation.cpp  02_position_control.cpp  03_builder_usage.cpp  CMakeLists.txt
examples/common/: dummy_spi.hpp
include/tmcxx/: tmc5160.hpp  version.hpp.in
include/tmcxx/adapters/stm32/: spi_driver.hpp
include/tmcxx/base/: concepts.hpp  register_base.hpp
include/tmcxx/builder/: tmc_register_builder.hpp
include/tmcxx/chips/: tmc5160_registers.hpp
include/tmcxx/detail/: tmc5160_bus.hpp  tmc5160_motion.hpp  tmc5160_register_access.hpp
include/tmcxx/features/: converter.hpp  core_communicator.hpp
include/tmcxx/helpers/: constants.hpp  error.hpp  units.hpp
tests/: CMakeLists.txt  builder_test.cpp  converter_test.cpp  core_communicator_test.cpp  motion_test.cpp  register_test.cpp  tmc5160_integration_test.cpp  units_test.cpp
tests/mocks/: mock_spi.hpp
